--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
   </head>
   <body>
-    <script src="sketch.js"></script>
+      
+    <center><script src="sketch.js"></script></center>
+    
   
 
 </body></html>
