--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         <script>
         window.addEventListener("click", event => {
-            document.getElementById("click-info").style.display = "none";
+            document.getElementById("click-info").innerHTML = "";
         });
         </script>
         
